--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -20,3 +20,6 @@ spring.datasource.platform=h2
 
 #Nos configurations
 mes-configs.limitDeProduits=6
+
+eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
+
